# Le_Wagon_MLOps_Optimization_Taxifare_API

./: .dockerignore  .env.sample  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
app/: config.py  logging.py  main.py
app/api/: endpoints.py
app/utils/: gcp.py  preprocess.py
tests/: test_endpoints.py
